    * changed path coding in utils.py for all functions.
    * changed the way icon are displayed in set_ts_stack_icon function.
    * modified set_ts_stack_icon and set_fc_stack_icon functions for better performance.
    * modified displayed date for better performance.
    * modified display of in and out temperature, humidity and pressure.
    * improved the use of pathlib.Path in mainwindow.

  * ADDED:
    * both normal and MSL pressures have been added to the database.


### November 6 2021, Release version 0.7.6 ###

  * MODIFIED:
    * change the log function to rotate log files.

  * FIXED:
    * fixed the update system and the close function which couldn't close the weather station.

  * ADDED:
    * added the version number in the aboutlog window.


### November 6 2021, Release version 0.7.5 ###

  * ADDED:
    * a new icon for fog has been added.

  * FIXED:
    * fixed path for update script.


### November 5 2021, Release version 0.7.4 ###

  * FIXED:
    * path for changelog in compiled version has been fixed.
    * fixed path for numpad and keyboard windows.
    * fixed path for icons in no connexion window.
    * fixed path issues in the place window.
    * fixed path for stylesheet in option window.
    * fixed path for stylesheet in aboutlog window.


### October 3 2021, Release version 0.7.3 ###

  * FIXED:
    * fixed an issue with icons in option and about windows.


### October 3 2021, Release version 0.7.2 ###

  * FIXED:
    * fixed an issue with MF forecast not fully displaying in 1h forecast section.


### October 2 2021, Release version 0.7.1 ###

  * FIXED:
    * the gui path was missing in the connexion window.
    * icons indicating forecast and time series pages were not loaded correctly.
    * name 'time' has been replaced by 't' for a variable to avoid conflict with time module.
    * fixed issues with icons in forecast windows.
    * fixed issue with icons in update and download windows.
    * try to fix an issue with MF forecast.